prusti-tests/tests/verify/ui/calls.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/calls.rs:30:5
   |
30 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/calls.rs:37:9
   |
37 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/calls.rs:45:1
   |
45 | / fn test_max3() -> i32 {
46 | |     let a = 4;
47 | |     let b = 3;
48 | |     max(a, b)
49 | | }
   | |_^

error: aborting due to 2 previous errors

